# crewai-openrouter-lab

./: .cursorignore  .editorconfig  .env_example  .gitignore  README.md  Taskfile.yml  configure.sh  mise.toml  pyproject.toml  requirements.txt
src/: select-openrouter-model.py
src/common/: logging.py
src/human_input/: crewai_chainlit_human_input.py
src/openrouter_client/: README.md  client.py  example.py  models.py  pyproject.toml  test_client.py
src/utils/: logging.py
